25 step add alt

--- a/pages/index2.html
+++ b/pages/index2.html
@@ -81,7 +81,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/4102.jpg" class="card-img" alt=....>
+                    <img src="/static/images/4102.jpg" class="card-img" alt="Обложка книги 'Нырок в забвение'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -101,7 +101,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/4876.jpg" class="card-img" alt=....>
+                    <img src="/static/images/4876.jpg" class="card-img" alt="Обложка книги 'Поющий колокольчик'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -123,7 +123,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/5299.jpg" class="card-img" alt=....>
+                    <img src="/static/images/5299.jpg" class="card-img" alt="Обложка книги 'Продается тело Христа'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -143,7 +143,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'Роковой поцелуй'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -165,7 +165,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/6758.jpg" class="card-img" alt=....>
+                    <img src="/static/images/6758.jpg" class="card-img" alt="Обложка книги 'Те, кто против нас'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -185,7 +185,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/6766.jpg" class="card-img" alt=....>
+                    <img src="/static/images/6766.jpg" class="card-img" alt="Обложка книги 'Телепортеры, внимание!'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -207,7 +207,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/8283.jpg" class="card-img" alt=....>
+                    <img src="/static/images/8283.jpg" class="card-img" alt="Обложка книги 'Зодиак'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -227,7 +227,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'Der Schwarm'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -249,7 +249,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'Justitia - est Часть 1'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -269,7 +269,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/8595.jpg" class="card-img" alt=....>
+                    <img src="/static/images/8595.jpg" class="card-img" alt="Обложка книги 'Lost in a Good Book'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
