--- a/pages/index5.html
+++ b/pages/index5.html
@@ -81,7 +81,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги '14-я книга. Барабаны Таланов'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -101,7 +101,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги '15-я книга. Школа арханелов'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -123,7 +123,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги '2-я книга. Сенсетивы Галана'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -143,7 +143,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги '4-я книга. Экспедиция на Голубой планетоид'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -165,7 +165,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги '5-я книга. В подземельях Бидрупа.'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -185,7 +185,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги '53-я американская мечта'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -207,7 +207,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги '6-я книга. Сражение за Бидруп.'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -227,7 +227,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги '64-клеточный дурдом'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -249,7 +249,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги '7-я книга. День Откровения'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -269,7 +269,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги '8-я книга. Полет Уригленны.'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
