--- a/pages/index7.html
+++ b/pages/index7.html
@@ -81,7 +81,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А дом стоит себе спокойно (Вечный дом)'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -101,7 +101,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А еще мы выгуливаем собак'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -123,7 +123,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А где же Рошар'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -143,7 +143,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А и Е'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -165,7 +165,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А я пойду дальше'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -185,7 +185,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А как же еще'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -207,7 +207,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А мне до них'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -227,7 +227,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А могла бы и быть'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -249,7 +249,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А моя мама - ведьма!'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -269,7 +269,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А мы лезем в окно'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
