--- a/pages/index1.html
+++ b/pages/index1.html
@@ -81,7 +81,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/239.jpg" class="card-img" alt=....>
+                    <img src="/static/images/239.jpg" class="card-img" alt="Обложка книги 'Алиби'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -101,7 +101,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/550.jpg" class="card-img" alt=....>
+                    <img src="/static/images/550.jpg" class="card-img" alt="Обложка книги 'Бич небесный'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -123,7 +123,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/768.jpg" class="card-img" alt=....>
+                    <img src="/static/images/768.jpg" class="card-img" alt="Обложка книги 'Цена посвящения: Серый Ангел'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -143,7 +143,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/769.jpg" class="card-img" alt=....>
+                    <img src="/static/images/769.jpg" class="card-img" alt="Обложка книги 'Цена посвящения: Время Зверя'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -165,7 +165,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/1131.jpg" class="card-img" alt=....>
+                    <img src="/static/images/1131.jpg" class="card-img" alt="Обложка книги 'Дело Джен, или Эйра немилосердия'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -185,7 +185,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/1715.jpg" class="card-img" alt=....>
+                    <img src="/static/images/1715.jpg" class="card-img" alt="Обложка книги 'Фабрика дьявола'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -207,7 +207,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'Говорящий камень'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -227,7 +227,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/2043.jpg" class="card-img" alt=....>
+                    <img src="/static/images/2043.jpg" class="card-img" alt="Обложка книги 'И Он пришел... ИТ-роман'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -249,7 +249,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'Казнить нельзя помиловать'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -269,7 +269,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/4024.jpg" class="card-img" alt=....>
+                    <img src="/static/images/4024.jpg" class="card-img" alt="Обложка книги 'Ночь, которая умирает'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
