--- a/pages/index4.html
+++ b/pages/index4.html
@@ -81,7 +81,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'Сборник рассказов и повестей'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -101,7 +101,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/18919.jpg" class="card-img" alt=....>
+                    <img src="/static/images/18919.jpg" class="card-img" alt="Обложка книги '...Яко помниши его'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -123,7 +123,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги '...На Вавилон'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -143,7 +143,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/18921.jpg" class="card-img" alt=....>
+                    <img src="/static/images/18921.jpg" class="card-img" alt="Обложка книги '...Вставьте шплинт А в гнездо Б...'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -165,7 +165,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги '...к звездам!'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -185,7 +185,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги '1-книга. Весна на Галане'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -207,7 +207,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги '10-я книга. Варкенские перемены.'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -227,7 +227,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги '11-я книга. Рождение империи сенсетивов'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -249,7 +249,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги '13-я книга. Галанское сватовство'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -269,7 +269,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги '132-й'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
