--- a/pages/index8.html
+++ b/pages/index8.html
@@ -81,7 +81,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А она бежала'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -101,7 +101,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А она уходила'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -123,7 +123,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А поезд идет'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -143,7 +143,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А роза упала на лапу Азора'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -165,7 +165,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А вдруг они победят'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -185,7 +185,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А вдруг'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -207,7 +207,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А все из-за любви'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -227,7 +227,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А все остальное - не в счёт'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -249,7 +249,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А всё остальное - не в счёт'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -269,7 +269,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/static/images/nopic.gif" class="card-img" alt=....>
+                    <img src="/static/images/nopic.gif" class="card-img" alt="Обложка книги 'А всходы будут не скоро'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
