--- a/template.html
+++ b/template.html
@@ -28,19 +28,19 @@
           {% if index == 1 %}
             <li class="page-item disabled"><a class="page-link" href="#">Назад</a></li>
           {% else %}
-            <li class="page-item"><a class="page-link" href="/pages/index{{index-1}}.html">Назад</a></li>
+            <li class="page-item"><a class="page-link" href="index{{index-1}}.html">Назад</a></li>
           {% endif %}
           {% for page in range(1, pages+1) %}
             {%if page == index %}
-              <li class="page-item active"><a class="page-link" href="/pages/index{{page}}.html">{{page}} <span class="sr-only">(current)</span></a></li>
+              <li class="page-item active"><a class="page-link" href="index{{page}}.html">{{page}} <span class="sr-only">(current)</span></a></li>
             {% else %}
-              <li class="page-item"><a class="page-link" href="/pages/index{{page}}.html">{{page}}</a></li>
+              <li class="page-item"><a class="page-link" href="index{{page}}.html">{{page}}</a></li>
             {% endif %}
           {% endfor %}
           {% if index == pages %}
             <li class="page-item disabled"><a class="page-link" href="#">Вперед</a></li>
           {% else %}
-            <li class="page-item"><a class="page-link" href="/pages/index{{index+1}}.html">Вперед</a></li>
+            <li class="page-item"><a class="page-link" href="index{{index+1}}.html">Вперед</a></li>
           {% endif %}
 
         </ul>
