--- a/template.html
+++ b/template.html
@@ -4,11 +4,8 @@
     <!-- Required meta tags 555-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/favicon/site.webmanifest">
-    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
@@ -28,19 +25,19 @@
           {% if index == 1 %}
             <li class="page-item disabled"><a class="page-link" href="#">Назад</a></li>
           {% else %}
-            <li class="page-item"><a class="page-link" href="index{{index-1}}.html">Назад</a></li>
+            <li class="page-item"><a class="page-link" href="/pages/index{{index-1}}.html">Назад</a></li>
           {% endif %}
           {% for page in range(1, pages+1) %}
             {%if page == index %}
-              <li class="page-item active"><a class="page-link" href="index{{page}}.html">{{page}} <span class="sr-only">(current)</span></a></li>
+              <li class="page-item active"><a class="page-link" href="/pages/index{{page}}.html">{{page}} <span class="sr-only">(current)</span></a></li>
             {% else %}
-              <li class="page-item"><a class="page-link" href="index{{page}}.html">{{page}}</a></li>
+              <li class="page-item"><a class="page-link" href="/pages/index{{page}}.html">{{page}}</a></li>
             {% endif %}
           {% endfor %}
           {% if index == pages %}
             <li class="page-item disabled"><a class="page-link" href="#">Вперед</a></li>
           {% else %}
-            <li class="page-item"><a class="page-link" href="index{{index+1}}.html">Вперед</a></li>
+            <li class="page-item"><a class="page-link" href="/pages/index{{index+1}}.html">Вперед</a></li>
           {% endif %}
 
         </ul>
