--- a/template.html
+++ b/template.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/static/bootstrap.min.css"  crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/bootstrap.min.css"  crossorigin="anonymous">
 
 
 
@@ -25,19 +25,19 @@
           {% if index == 1 %}
             <li class="page-item disabled"><a class="page-link" href="#">Назад</a></li>
           {% else %}
-            <li class="page-item"><a class="page-link" href="/pages/index{{index-1}}.html">Назад</a></li>
+            <li class="page-item"><a class="page-link" href="../pages/index{{index-1}}.html">Назад</a></li>
           {% endif %}
           {% for page in range(1, pages+1) %}
             {%if page == index %}
-              <li class="page-item active"><a class="page-link" href="/pages/index{{page}}.html">{{page}} <span class="sr-only">(current)</span></a></li>
+              <li class="page-item active"><a class="page-link" href="../pages/index{{page}}.html">{{page}} <span class="sr-only">(current)</span></a></li>
             {% else %}
-              <li class="page-item"><a class="page-link" href="/pages/index{{page}}.html">{{page}}</a></li>
+              <li class="page-item"><a class="page-link" href="../pages/index{{page}}.html">{{page}}</a></li>
             {% endif %}
           {% endfor %}
           {% if index == pages %}
             <li class="page-item disabled"><a class="page-link" href="#">Вперед</a></li>
           {% else %}
-            <li class="page-item"><a class="page-link" href="/pages/index{{index+1}}.html">Вперед</a></li>
+            <li class="page-item"><a class="page-link" href="../pages/index{{index+1}}.html">Вперед</a></li>
           {% endif %}
 
         </ul>
@@ -48,7 +48,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="{{book.img_src|urlencode}}" class="card-img" alt="Обложка книги '{{book.title}}'">
+                    <img src="..{{book.img_src|urlencode}}" class="card-img" alt="Обложка книги '{{book.title}}'">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
